edited about me page. fixed bug with flexbox on laptop view where tech stack would overlap

--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@ a {
 
 html {
   overflow-y: scroll; 
+  scroll-behavior: smooth;
 }
 
 main {
@@ -125,7 +126,7 @@ main {
 }
 .landing {
   max-width: 100%;
-  width:100%; 
+  width: 100%; 
   height: 100vh;  
   display: flex; 
   flex-direction: column; 
@@ -229,16 +230,13 @@ main {
   &__article {
     display: flex; 
     justify-content: space-between; 
-    align-items: flex-start;
+    align-items: space-between;
     width: 70vw;
-    height: 40vh;  
   }
   &__article__text {
     display: flex;
     flex-direction: column; 
     justify-content: space-between;
-    height: 100%;
-    // width: 70%;   
   }
   &__article__header { 
     font-size: 50px;  
@@ -248,16 +246,13 @@ main {
     background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box; 
     border: 5px solid transparent;      
     border-radius: 15px;
-    overflow: hidden; 
-    height:100%;  
+    width: 22vw;  
   } 
   &__article__info {
     font-size: 24px;
-    height: 100%;
     padding-top: 20px;
     padding-bottom: 20px; 
     padding-right: 20px; 
-    // list-style-position: inside;
   &__highlight {
     color: #64ffda;
     font-weight: bold;  
@@ -296,12 +291,10 @@ main {
     grid-template-rows: repeat(3, auto); 
     width: 70vw; 
     font-size: 70px;  
-    // max-height: 100%; 
     gap: 30px; 
     padding: 20px; 
     justify-items: center;
     align-items: center;   
-    // text-align: center; 
   }
 }
 
@@ -590,6 +583,10 @@ main {
     &__tech-stack__header {
       font-size: 30px;
     }
+    // &__article__profile-pic {
+    //   width: auto; 
+    //   height: 70vh; 
+    // }
   }
   .projects {
     &__header {
